--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
-      "name": "case-management-system",
-      "private": true,
-      "version": "0.0.0",
-      "type": "module",
-      "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-      },
-      "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.14.2",
-        "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.2",
-        "bcryptjs": "^2.4.3",
-        "nodemailer": "^6.9.3",
-        "redis": "^4.6.7",
-        "elasticsearch": "^16.7.3",
-        "multer": "^1.4.5-lts.1",
-        "pdf-lib": "^1.17.1",
-        "cors": "^2.8.5",
-        "helmet": "^7.0.0",
-        "express-rate-limit": "^6.7.0",
-        "express-session": "^1.17.3",
-        "connect-redis": "^7.1.0",
-        "typescript": "^5.1.6",
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@types/node": "^20.4.5"
-      },
-      "devDependencies": {
-        "@vitejs/plugin-react": "^4.0.3",
-        "vite": "^4.4.5"
-      }
-    }
+  "name": "case-management",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "server": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "libsql": "^0.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "vite": "^4.5.5"
+  }
+}
